--- a/dev/uld files/uld.css
+++ b/dev/uld files/uld.css
@@ -1,11 +1,12 @@
+
 body {
     margin: 0;
     padding: 0;
 }
 
-* {
-    box-sizing: border-box;
+html {
     -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .page {
@@ -56,7 +57,8 @@ table {
   font-family: verdana,arial,sans-serif;
   font-size: 6px;
   color: black;
-  border-collapse: collapse;}
+  border-collapse: collapse;
+}
 
 table th {
   padding: 6px;
@@ -99,4 +101,10 @@ h1, h2, h3 {
 
 .smallpad {
     padding: 2px 6px 2px 6px;
+}
+
+.r {
+    height: 20mm;
+    display: table-cell;
+    vertical-align: middle;
 }
